[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
default-run = "xtask"

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
xshell = "0.2"
eyre = "0.6"
color-eyre = "0.6"
cargo_metadata = { version = "0.21.0", default-features = false }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
nextest-monitor = { path = "../crates/utils/nextest-monitor" }

[dev-dependencies]
irys-testing-utils.workspace = true

[lints]
workspace = true
