[package]
edition = "2021"
name = "irys-api-server"
version = "0.1.0"

[dependencies]
# Irys
irys-actors.workspace = true
irys-database.workspace = true
irys-utils.workspace = true
irys-domain.workspace = true
irys-reth-node-bridge.workspace = true
irys-reward-curve.workspace = true
irys-types.workspace = true

reth.workspace = true
alloy-eips.workspace = true
awc.workspace = true
socket2.workspace = true
base58.workspace = true
hex.workspace = true
tokio.workspace = true
serde_json = { workspace = true, features = ["std", "raw_value"] }
serde.workspace = true
actix-web.workspace = true
actix-cors = "0.7"
tracing.workspace = true
opentelemetry.workspace = true
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_31"] }
eyre.workspace = true
thiserror.workspace = true

[dev-dependencies]
irys-testing-utils.workspace = true
test-log.workspace = true
rstest.workspace = true
proptest.workspace = true
actix-web = { workspace = true, features = ["macros"] }

[lints]
workspace = true
