[package]
build = "build/main.rs"
edition.workspace = true
name = "irys-c"
rust-version.workspace = true
version.workspace = true

[dependencies]
irys-types.workspace = true
openssl.workspace = true
rand.workspace = true

[build-dependencies]
bindgen = "0.72.1"
cc = "1.0"
openssl-src = "300.3.2"
pkg-config = "0.3.31"
vcpkg = "0.2.8"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
test-log.workspace = true

[lints]
workspace = true

[features]
nvidia = []
