[package]
edition = "2021"
name = "irys-chain"
version = "0.1.0"

[[bin]]
name = "irys"
path = "src/main.rs"

[features]
nvidia = ["irys-actors/nvidia"]

[dependencies]
# Irys
irys-database.workspace = true
irys-storage.workspace = true
irys-reth-node-bridge.workspace = true
irys-types.workspace = true
irys-api-server.workspace = true
irys-config.workspace = true
irys-testing-utils.workspace = true
irys-actors.workspace = true
irys-packing.workspace = true
irys-vdf.workspace = true

base64-url.workspace = true

base58.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
openssl.workspace = true
assert_matches.workspace = true
eyre.workspace = true
rand.workspace = true
nodit.workspace = true
reth-db.workspace = true
reth-primitives.workspace = true
reth.workspace = true
toml.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
env_logger = "0.11.5"
actix-rt.workspace = true
actix-web.workspace = true
actix-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

alloy-network = { path = "../../ext/alloy/crates/network" }
alloy-signer-local.workspace = true
alloy-core.workspace = true
actix.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

alloy-serde.workspace = true
arbitrary = { workspace = true, features = ["derive"] } # arbitrary.workspace = truebytes.workspace = true
bytes.workspace = true

derive_more.workspace = true
modular-bitfield.workspace = true
reth-cli-runner.workspace = true
futures.workspace = true
reth-tracing.workspace = true
hex.workspace = true
test-fuzz.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "serde"] }
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-provider.workspace = true
core_affinity = "0.8.1"

[dev-dependencies]
awc = "3.5"
irys-actors = { workspace = true, features = ["test-utils"] }
alloy-sol-types.workspace = true
alloy-contract.workspace = true

[package.metadata.cargo-machete]
ignored = ["alloy-sol-types", "alloy-contract"]
