[package]
edition.workspace = true
name = "irys-chain"
version.workspace = true

[[bin]]
name = "irys"
path = "src/main.rs"

[features]
nvidia = ["irys-actors/nvidia"]
test-utils = []
telemetry = ["irys-utils/telemetry", "irys-testing-utils/telemetry"]

[dependencies]
# Irys
irys-database.workspace = true
irys-domain.workspace = true
irys-storage.workspace = true
irys-reth-node-bridge.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-server.workspace = true
irys-config.workspace = true
irys-testing-utils.workspace = true
irys-actors.workspace = true
irys-packing.workspace = true
irys-vdf.workspace = true
irys-price-oracle.workspace = true
irys-p2p.workspace = true
irys-api-client.workspace = true
irys-reward-curve.workspace = true
irys-utils.workspace = true

base58.workspace = true
tracing-error.workspace = true
eyre.workspace = true
rand.workspace = true
toml.workspace = true
serde_json = "1"
actix-web.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tracing-subscriber.workspace = true
modular-bitfield.workspace = true
futures.workspace = true
test-fuzz.workspace = true
k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "serde",
] }
core_affinity = "0.8.1"
reth-db.workspace = true
reth.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
reth-cli-util = { workspace = true, features = ["jemalloc"] }
reqwest = { workspace = true, features = ["json"] }
dotenvy = "0.15"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
test-log.workspace = true

[package.metadata.cargo-machete]
ignored = ["alloy-sol-types", "alloy-contract"]

[lints]
workspace = true
