[package]
name = "irys-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
irys-database.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
eyre.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
clap = { workspace = true, features = ["derive"] }
reth-node-core.workspace = true
irys-reth-node-bridge.workspace = true
irys-reth.workspace = true
irys-chain.workspace = true
tokio.workspace = true
irys-domain.workspace = true
irys-tui.workspace = true
reth-provider.workspace = true
reth-node-types.workspace = true
reth-tasks.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true
test-log.workspace = true

[lints]
workspace = true
