[package]
name = "irys-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
irys-database.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
eyre.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
clap = { workspace = true, features = ["derive"] }
reth-node-core.workspace = true
irys-reth-node-bridge.workspace = true
irys-reth.workspace = true
irys-chain.workspace = true
tokio.workspace = true
irys-config.workspace = true
irys-domain.workspace = true
irys-storage.workspace = true
irys-utils.workspace = true
irys-tui.workspace = true
reth-provider.workspace = true
reth-node-types.workspace = true
reth-tasks.workspace = true
hex.workspace = true
serde_json.workspace = true
alloy-signer.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
zeroize = "1.8"

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true
test-log.workspace = true

[lints]
workspace = true
