[package]
name = "irys-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = ["irys-types/test-utils"]

[dependencies]
irys-types.workspace = true
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
alloy-primitives.workspace = true

[dev-dependencies]
irys-testing-utils.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
proptest.workspace = true
rstest.workspace = true
test-log.workspace = true

[lints]
workspace = true
