[package]
name = "irys-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = ["irys-types/test-utils"]

[dependencies]
alloy-core.workspace = true
atomic-write-file = "0.2"
derive_more.workspace = true
eyre.workspace = true
irys-types.workspace = true
irys-config.workspace = true
irys-database.workspace = true
irys-packing.workspace = true
irys-storage.workspace = true
irys-reth-node-bridge.workspace = true
nodit.workspace = true
openssl.workspace = true
serde.workspace = true
tracing.workspace = true
rand.workspace = true
reth-db.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
lru.workspace = true
alloy-rpc-types.workspace = true
reth.workspace = true
reth-ethereum-primitives.workspace = true
serde_json.workspace = true
toml.workspace = true
num-bigfloat = "1"
base58.workspace=true
thiserror.workspace=true

[dev-dependencies]
test-log.workspace = true
assert_matches = "1.5.0"
rstest.workspace = true
proptest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
irys-testing-utils.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
