[package]
edition = "2021"
name = "irys-efficient-sampling"
version = "0.1.0"

[dependencies]
irys-types.workspace = true

eyre.workspace = true
openssl.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
test-log.workspace = true

[lints]
workspace = true
