[package]
edition = "2021"
name = "irys-efficient-sampling"
version = "0.1.0"

[dependencies]
irys-types.workspace = true

eyre.workspace = true
openssl.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[lints]
workspace = true

[[bench]]
name = "sampling_bench"
harness = false
