[package]
edition.workspace = true
name = "irys-efficient-sampling"
version.workspace = true

[dependencies]
irys-types.workspace = true

eyre.workspace = true
openssl.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
proptest.workspace = true
test-log.workspace = true

[lints]
workspace = true
