[package]
name = "ema-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
futures.workspace = true
reth.workspace = true
tracing.workspace = true
tokio.workspace = true
irys-types.workspace = true
futures-concurrency.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
heapless.workspace = true

[lints]
workspace = true
