[package]
name = "irys-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
irys-actors.workspace = true
irys-domain = { workspace = true, features = ["test-utils"] }
irys-types.workspace = true
irys-primitives.workspace = true
irys-api-client.workspace = true
irys-database.workspace = true
irys-vdf.workspace = true
irys-reth-node-bridge.workspace = true
# Other dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre.workspace = true
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
actix.workspace = true
serde = { workspace = true }
actix-rt.workspace = true
reth-tasks.workspace = true
lru.workspace = true
async-trait = "0.1"
reth.workspace = true
moka.workspace = true
futures.workspace = true
serde_json.workspace = true
dashmap = "6.1.0"
backon = "1.2"
sha2 = "0.10"
tokio-util = "0.7"

[dev-dependencies]
irys-testing-utils.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-client = { workspace = true, features = ["test-utils"] }
irys-actors = { workspace = true, features = ["test-utils"] }
irys-storage.workspace = true
async-trait = "0.1"
rstest.workspace = true
proptest.workspace = true

[lints]
workspace = true
